no idea what i finished last

--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
     <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/2.7.0/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.7.0/firebaseui.css" />
-    <script type="text/javascript" src="firebase-init.js"></script>
-    <script type="text/javascript" src="firebase-config.js"></script>
+    <script type="text/javascript" src="scripts/firebase-init.js"></script>
+    <script type="text/javascript" src="scripts/firebase-config.js"></script>
   </head>
   <body style="background-color: #7ed6df">
     <div id="firebaseui-auth-container"></div>
