--- a/main.html
+++ b/main.html
@@ -3,12 +3,18 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <!-- <script src="https://cdn.firebase.com/libs/firebaseui/2.7.0/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.7.0/firebaseui.css" /> -->
+    <script type="text/javascript" src="scripts/firebase-init.js"></script>
+    <!-- <script type="text/javascript" src="scripts/firebase-config.js"></script> -->
+    
 </head>
 
 <body>
     <button type="button" id="analyzeBookmarks">Analyze Bookmarks</button>
 
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
     <!-- <script src="popup.js"></script> -->
 </body>
 
