--- a/login.html
+++ b/login.html
@@ -10,11 +10,12 @@
 
 <body>
     
-    Email: <input type="text" name="email" id="email" value="xyz@abc.com"> 
+    <!-- Email: <input type="text" name="email" id="email" value="xyz@abc.com"> 
     Password: <input type="text" name="password" id="password" value="testing">
-    <button id="login">Login</button>
+    <button id="login">Login</button> -->
 
     <button id="upload-bookmarks">Upload Bookmarks</button>
+    <button id="analyze-bookmarks">Analyze Bookmarks</button>
 
     <script src="Bookmark.js"></script>
     <script src="config.js"></script>
