separated preprocessing and analyzing, created respective collections in database and moels

--- a/login.html
+++ b/login.html
@@ -15,6 +15,7 @@
     <button id="login">Login</button> -->
 
     <button id="upload-bookmarks">Upload Bookmarks</button>
+    <button id="preprocess-bookmarks">Preprocess Bookmarks</button>
     <button id="analyze-bookmarks">Analyze Bookmarks</button>
 
     <script src="Bookmark.js"></script>
