added boom function place holder

--- a/login.html
+++ b/login.html
@@ -17,6 +17,7 @@
     <button id="upload-bookmarks">Upload Bookmarks</button>
     <button id="preprocess-bookmarks">Preprocess Bookmarks</button>
     <button id="analyze-bookmarks">Analyze Bookmarks</button>
+    <button id="boom">Boom</button>
 
     <script src="Bookmark.js"></script>
     <script src="config.js"></script>
